# anchor-gen

.github/workflows/: release.yml
crates/anchor-idl/src/: fields.rs  lib.rs  program.rs  typedef.rs
examples/dflow/: Cargo.toml  idl.json
examples/dflow/src/: lib.rs
